--- a/pom.xml
+++ b/pom.xml
@@ -140,6 +140,12 @@
             <artifactId>javase</artifactId>
             <version>3.4.0</version>
         </dependency>
+        <!-- Webcam Capture -->
+        <dependency>
+            <groupId>com.github.sarxos</groupId>
+            <artifactId>webcam-capture</artifactId>
+            <version>0.3.12</version>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jdbc</artifactId>
